# blockhain_emulator

./: README.md
LocalBlockchainEmulation/: Cargo.toml
LocalBlockchainEmulation/src/: main.rs
ProofOfWork/src/: main.rs
blockchain_network/: Cargo.toml  config.json
blockchain_network/src/: block.rs  blockchain.rs  client.rs  main.rs  server.rs  transaction.rs
fork_and_consensus/: Cargo.toml
fork_and_consensus/src/: block.rs  blockchain.rs  header.rs  main.rs
local_blockchain_emulation/: Cargo.toml
local_blockchain_emulation/src/: main.rs
logic_into_modules/: Cargo.toml
logic_into_modules/src/: blockchain.rs  main.rs  transaction.rs
node_as_service/: Cargo.toml  Serialized_blockchain
node_as_service/src/: block.rs  blockchain.rs  header.rs  main.rs  transaction.rs
proof_of_work/src/: main.rs
save_and_load/: Cargo.toml  serialized_blockchain
save_and_load/src/: blockchain.rs  header.rs  main.rs
