[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "websocket-server"
path = "src/server.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

[dependencies]
sha2 = "0.10.0"
chrono = "0.4"
rand = "0.8"
borsh = "0.9.1"
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"

